[EFL] [DRT] editing/execCommand/paste-and-match-style-event.html crashes https://bugs.webkit.org/show_bug.cgi?id=86961

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-06-01
Reviewed by Csaba Osztrogonác.

Source/WebKit/efl:

Call ecore_x_init() in ewk_init() to initialize the ecore_x library.
This avoids crashing upong calling WebCore::systemBeep() which uses
ecore_x_bell() internally.

* ewk/ewk_main.cpp:
(ewk_init):

LayoutTests:

Unskip editing/execCommand/paste-and-match-style-event.html now that
it is no longer crashing thanks to ecore_x library init.

* platform/efl/test_expectations.txt:

Canonical link: https://commits.webkit.org/105907@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119228 268f45cc-cd09-0410-ab3c-d52691b4dbfc